# MT-100

./: .gitignore  README.md
GUI/: CMakeLists.txt  MT-100.jucer  TODO.txt  make_test_project.sh
GUI/Source/: AdsrEditor.cpp  AdsrEditor.h  ControlPanel.cpp  ControlPanel.h  Main.cpp  MainComponent.cpp  MainComponent.h  PartialPanel.cpp  PartialPanel.h  SliderUtil.h  SysExManager.cpp  SysExManager.h  SystemPanel.cpp  SystemPanel.h  TimbrePanel.cpp  TimbrePanel.h  TvfPanel.cpp  TvfPanel.h  adsr_editor.cpp  adsr_editor.h
GUI/Source/Component/: AdsrEditor.cpp  AdsrEditor.h  Keyfollow.cpp  Keyfollow.h
GUI/Source/Memory/: IMemory.h  SysExMemory.cpp  SysExMemory.h
GUI/Source/Property/: ChoiceProperty.h  FilterEnvelopeProperty.h  FilterProperty.h  FloatProperty.h  GroupProperty.h  IProperty.h  IPropertyListener.h  IntProperty.h  ListProperty.h  PartialPitchProperty.h  PartialProperty.h  SystemProperty.h  TimbreProperty.h  TopProperty.h  WaveGeneratorProperty.h
GUI/test/: ChoiceProperty_test.cpp  FloatProperty_test.cpp  GroupProperty_test.cpp  IntProperty_test.cpp  Memory_mock.h  SysExMemory_test.cpp
SierraSysEx/: BARON.SYX  BRAIN.SYX  BRAIN2.SYX  CAMELOT.SYX  CASTLE.SYX  DRAGON.SYX  ECOQUEST.SYX  FIREHAWK.SYX  GK.SYX  HOC.SYX  ICEMAN.SYX  JONES.SYX  KQ1.SYX  KQ4.SYX  KQ5.SYX  KQ6.SYX  KQ7.SYX  LSL2.SYX  LSL6.SYX  MG.SYX  ROBIN.SYX  ROTDVGA.SYX  SILPHEED.SYX  SORC.SYX  SQ3.SYX  SQ4.SYX  SQ5.SYX  SQ6.SYX  STELLAR7.SYX  THEX2.SYX  ZELIARD.SYX  descriptions.txt
python/: MT.kv  convert.py  gui.py  json2sysex2json.py  mem2sysex.py  mt_parameters.py  send.py  sysex2mem.py  (+2 more)
(+2 files in other folders)
